# python-cuiplotlib

./: pyproject.toml
src/cuiplotlib/: __Init__.py  axes.py  color.py  color2.py  colorbar.py  example.py  line.py  logging.py  ticker.py  transform.py
src/cuiplotlib/examples/: contour.py  line.py  plot.py
test/: test_autoticks.py  test_color.py  test_mqlogger.py  test_plot.py
